# dolphin

./: .gitignore  README.md  dolphin.service  install.sh  manage.py  pyproject.toml  requirements.txt  run.sh
api/: urls.py  views.py
dolphin/: asgi.py  settings.py  urls.py  wsgi.py
element/: urls.py  views.py
templates/: base.html
templates/element/: index.html
templates/widgets/: generic.html
widget/: admin.py  apps.py  models.py  urls.py  views.py
widget/migrations/: 0001_initial.py  0002_scalartoken.py  0003_scalartoken_syttoken.py  0004_widget_slug.py  0005_remove_widget_slug.py  0006_alter_widget_title.py
