[tool.poetry]
name = "dolphin"
version = "0.1.0"
description = ""
authors = ["Thomas Hoang <megatunger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
django-extensions = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
